fix: 弹出框去除pre-wrap

--- a/src/dialog/index.less
+++ b/src/dialog/index.less
@@ -49,7 +49,7 @@
       line-height: @dialog-message-line-height;
 
       // allow newline charactor
-      white-space: pre-wrap;
+      // white-space: pre-wrap;
       text-align: center;
       word-wrap: break-word;
       -webkit-overflow-scrolling: touch;
